# Learn-Create_Test_Courses

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
src/: Authenticator.py  Authorization.py  Config_template.py  create_courses.ipynb  delete_courses.ipynb  hello_world.py  main.py
src/.ipynb_checkpoints/: Config_template-checkpoint.py  create_courses-checkpoint.ipynb
