[tool.poetry]
name = "learn-create-test-courses"
version = "0.1.0"
description = ""
authors = ["mark-b-kauffman <mark.kauffman@blackboard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
datetime3 = "^3.8.0"
ipython = "^8.22.2"
nbformat = "^5.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
