[tool.poetry]
name = "learn-create-test-courses"
version = "0.1.0"
description = ""
authors = ["mark-b-kauffman <mark.kauffman@blackboard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
datetime3 = "^3.8.0"
ipython = "^8.23.0"
nbformat = "^5.10.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
